--- a/css/style.scss
+++ b/css/style.scss
@@ -1,16 +1,37 @@
-html,body{
+html, body {
   height: 100%;
 }
+
 body {
   background: #eee;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
-  color:#000;
+  color: #000;
   margin: 0;
   padding: 0;
   position: relative;
   overflow: hidden;
+  & > {
+    .swiper-pagination {
+      position: absolute;
+      text-align: center;
+      transition: .3s opacity;
+      z-index: 10;
+      transform: rotate(90deg) translate(-50%, 120%);
+      top: 50%;
+      &.swiper-pagination-vertical {
+        right: auto;
+        left: 10%;
+        .swiper-pagination-bullet {
+          width: 15px;
+          height: 15px;
+          margin: 20px 0 20px 20px;
+        }
+      }
+    }
+  }
 }
+
 .swiper-container-horizontal {
   width: 100%;
   height: 300px;
@@ -18,7 +39,7 @@ body {
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background: transparent;
     border: 1px solid dodgerblue;
     /* Center slide text vertically */
     display: -webkit-box;
@@ -36,16 +57,38 @@ body {
   }
 }
 
-.section-folder{
+.wrapper {
   display: block;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   height: 80vh;
   width: 80%;
   overflow: hidden;
-  .fluid{
+
+  .on-bottom, .on-top {
+    display: block;
+    z-index: 100;
+    opacity: 0;
+    transition: .5s opacity ease;
+    font-size: 34px;
+    position: absolute;
+    bottom: 60px;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    left: 0;
+    &.active {
+      opacity: 1;
+      transition: .5s opacity ease;
+    }
+  }
+  .on-top {
+    bottom: auto;
+    top: 10px;
+  }
+  .fluid {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -53,27 +96,27 @@ body {
     top: 0;
     background-color: #fff;
   }
-  .middle-slide{
-    background: url('../img/section2.jpg') no-repeat center ;
+  .middle-slide {
+    background: url('../img/section2.jpg') no-repeat center;
     background-size: cover;
   }
-  .center-folder{
+  .center-folder {
     display: block;
     position: absolute;
     width: 100%;
-    top:50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
   }
-  .top-slide{
-    background: url('../img/55.jpg') no-repeat center ;
+  .top-slide {
+    background: url('../img/55.jpg') no-repeat center;
     background-size: cover;
   }
-  .info-text{
+  .info-text {
     float: left;
-    width:  33.33333333%;
-    .inner-text{
-      padding:0 15px;
+    width: 33.33333333%;
+    .inner-text {
+      padding: 0 15px;
       margin: 30px;
       border: 1px solid dodgerblue;
       background-color: #fff;
@@ -86,7 +129,7 @@ body {
     .swiper-slide {
       text-align: center;
       font-size: 18px;
-      background: #fff;
+      background: transparent;
       border: 0;
       /* Center slide text vertically */
       display: -webkit-box;
@@ -101,45 +144,70 @@ body {
       -ms-flex-align: center;
       -webkit-align-items: center;
       align-items: center;
-      p{
+      p {
         font-size: 14px;
       }
     }
   }
-  .bottom-slide{
-    background: url('../img/77.jpg') no-repeat center ;
+  .bottom-slide {
+    background: url('../img/77.jpg') no-repeat center;
     background-size: cover;
   }
-  .sl-img-1{
-    background: url('../img/22.jpg') no-repeat center ;
+  .sl-img-1 {
+    background: url('../img/22.jpg') no-repeat center;
     background-size: cover;
   }
-  .sl-img-2{
-    background: url('../img/33.jpg') no-repeat center ;
+  .sl-img-2 {
+    background: url('../img/33.jpg') no-repeat center;
     background-size: cover;
   }
-  .sl-img-3{
-    background: url('../img/66.jpg') no-repeat center ;
+  .sl-img-3 {
+    background: url('../img/66.jpg') no-repeat center;
     background-size: cover;
   }
-  .sl-img-4{
-    background: url('../img/11.jpg') no-repeat center ;
+  .sl-img-4 {
+    background: url('../img/11.jpg') no-repeat center;
     background-size: cover;
   }
 }
 
-
-@media  (max-width:767px){
-  .section-folder{
-    width: 95%;
-    .info-text{
+@media (max-width: 767px) {
+  body > .swiper-pagination.swiper-pagination-vertical {
+    right: auto;
+    left: 3%;
+    .swiper-pagination-bullet {
+      width: 10px;
+      height: 10px;
+      margin: 0 0 0 10px;
+    }
+  }
+  .wrapper {
+    width: 80%;
+    .swiper-container-horizontal-second {
+      height: 380px;
+    }
+    .on-bottom {
+      font-size: 20px;
+    }
+    .on-top {
+      font-size: 20px;
+    }
+    .info-text {
       float: none;
-      width:  100%;
-      .inner-text{
-        padding:0 15px;
+      width: 100%;
+      .inner-text {
+        padding: 0 15px;
         margin: 30px;
         border: 1px solid dodgerblue;
+        max-height: 85%;
+        overflow: auto;
       }
     }
+  }
+  .swiper-button-next {
+    display: none;
+  }
+  .swiper-button-prev {
+    display: none;
   }
 }
